--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,6 @@ controllers:
         namespace: App\Controller
     type: attribute
 
+exercises_by_muscle_group:
+    path: '/muscle-group/{muscleGroupName}'
+    controller: 'App\Controller\ExerciseController::exercisesByMuscleGroup'
